Адаптивные сетки block promo

--- a/source/index.html
+++ b/source/index.html
@@ -79,8 +79,7 @@
       <section class="promo">
         <div class="promo__wrapper wrapper">
           <div class="promo__title-wrap">
-            <h2 class="title-main">Вязаные корзинки</h2>
-            <span class="promo__week title-inner">Товар недели</span>
+            <h2 class="promo__title title-main">Вязаные корзинки</h2>
           </div>
           <div class="promo__description-wrap">
             <p class="promo__description">
@@ -105,7 +104,7 @@
           <img class="promo__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Набор вязаных корзинок">
           <div class="promo__price-wrap">
             <p class="promo__price title-inner">Цена: 990 руб.</p>
-            <button class="button promo__button" type="button">Заказать</button>
+            <button class="promo__button button" type="button">Заказать</button>
           </div>
         </div>
       </section>
