Адаптивные сетки catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -67,16 +67,18 @@
         <div class="wrapper">
           <ul class="catalog-inner__list catalog-list">
             <li class="catalog-list__item">
-              <a class="catalog-list__link" href="#">
+              <a class="catalog-list__link--img" href="#">
                 <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg">
                   <img class="catalog-list__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="игрушка 'Вязаный зайчик'">
                 </picture>
               </a>
               <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
-                  <h3 class="title-inner catalog-list__name">Зайчик-попрыгайчик</h3>
+                  <h3 class="catalog-list__name title-inner">Зайчик-попрыгайчик</h3>
                 </a>
-                <p class="description-inner catalog-list__description">Рост 30 см, вес 200 г</p>
+                <p class="catalog-list__description description-inner">Рост 30 см, вес 200 г</p>
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">1 200 руб.</span>
                   <a class="catalog-list__button" href="add-to-cart.html" aria-label="Добавить в корзину">
@@ -89,8 +91,12 @@
             </li>
 
             <li class="catalog-list__item">
-              <a class="catalog-list__link" href="#">
-                <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
+              <a class="catalog-list__link--img" href="#">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg">
+                  <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
+                </picture>
               </a>
               <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
@@ -109,8 +115,12 @@
             </li>
 
             <li class="catalog-list__item">
-              <a class="catalog-list__link" href="#">
-                <img class="catalog-list__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
+              <a class="catalog-list__link--img" href="#">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg">
+                  <img class="catalog-list__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
+                </picture>
               </a>
               <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
