Изменения по замечаниям наставника/ Адаптивные сетки

--- a/source/index.html
+++ b/source/index.html
@@ -213,7 +213,7 @@
           </div>
 
           <div class="contacts__link-wrap">
-            <a class="button contacts__link" href="#">Напишите нам</a>
+            <a class="contacts__link button" href="#">Напишите нам</a>
           </div>
       </section>
     </main>
