--- a/source/form.html
+++ b/source/form.html
@@ -64,108 +64,115 @@
       </div>
 
       <section class="order">
-        <div class="wrapper">
-          <p class="order__description description-inner">
-            Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-          </p>
-          <form class="order__form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="order__description description-inner">
+          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+        </p>
 
-            <fieldset class="order__field">
-              <legend class="order__name title-inner">Тип</legend>
-              <ul class="order__set order-list">
-                <li class="order-list__item order-list__item--interior">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="radio" name="radio-input" checked>
-                    <span class="order__box order__box--radio"></span>
+        <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
+
+          <fieldset class="order-form__field order-form__field--type">
+            <div class="order-form__wrapper--type wrapper">
+              <h3 class="order-form__name order-form__name--type">Тип</h3>
+              <ul class="order-form__set">
+                <li class="order-form__item order-form__item--interior">
+                  <label class="order-form__sign title-inner">
+                    <input class="order-form__input" type="radio" name="radio-input" checked>
+                    <span class="order-form__box order-form__box--radio"></span>
                     Аксессуар для интерьера
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="radio" name="radio-input">
-                    <span class="order__box order__box--radio"></span>
+                <li class="order-form__item">
+                  <label class="order-form__sign title-inner">
+                    <input class="order-form__input" type="radio" name="radio-input">
+                    <span class="order-form__box order-form__box--radio"></span>
                     Детская игрушка
                   </label>
                 </li>
               </ul>
-            </fieldset>
+            </div>
+          </fieldset>
 
-            <fieldset class="order__field">
-              <legend class="order__name title-inner">Цвет</legend>
-              <ul class="order__set order-list">
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="checkbox" name="check-input" checked>
-                    <span class="order__box order__box--check"></span>
+          <fieldset class="order-form__field order-form__field--color">
+            <div class="order-form__wrapper--color wrapper">
+              <h3 class="order-form__name  order-form__name--color">Цвет</h3>
+              <ul class="order-form__set order-form__set--color">
+                <li class="order-form__item order-form__item--color">
+                  <label class="order-form__sign order-form__sign--color title-inner">
+                    <input class="order-form__input" type="checkbox" name="check-input" checked>
+                    <span class="order-form__box order-form__box--check"></span>
                     Белый
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="checkbox" name="check-input" checked>
-                    <span class="order__box order__box--check"></span>
+                <li class="order-form__item">
+                  <label class="order-form__sign order-form__sign--color title-inner">
+                    <input class="order-form__input" type="checkbox" name="check-input" checked>
+                    <span class="order-form__box order-form__box--check"></span>
                     Серый
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="checkbox" name="check-input">
-                    <span class="order__box order__box--check"></span>
+                <li class="order-form__item">
+                  <label class="order-form__sign order-form__sign--color title-inner">
+                    <input class="order-form__input" type="checkbox" name="check-input">
+                    <span class="order-form__box order-form__box--check"></span>
                     "Тиффани"
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="checkbox" name="check-input">
-                    <span class="order__box order__box--check"></span>
+                <li class="order-form__item">
+                  <label class="order-form__sign order-form__sign--color title-inner">
+                    <input class="order-form__input" type="checkbox" name="check-input">
+                    <span class="order-form__box order__box--check"></span>
                     Чёрный
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="checkbox" name="check-input">
-                    <span class="order__box order__box--check"></span>
+                <li class="order-form__item">
+                  <label class="order-form__sign order-form__sign--color title-inner">
+                    <input class="order-form__input" type="checkbox" name="check-input">
+                    <span class="order-form__box order-form__box--check"></span>
                     Розовый
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="order__sign title-inner">
-                    <input class="order__input" type="checkbox" name="check-input">
-                    <span class="order__box order__box--check"></span>
+                <li class="order-form__item">
+                  <label class="order-form__sign order-form__sign--color title-inner">
+                    <input class="order-form__input" type="checkbox" name="check-input">
+                    <span class="order-form__box order-form__box--check"></span>
                     Оранжевый
                   </label>
                 </li>
               </ul>
-            </fieldset>
+            </div>
+          </fieldset>
 
-            <fieldset class="order__field">
-              <legend class="order__name title-inner">ФИО</legend>
-              <ul class="order__set order-list">
-                <li class="order-list__item order-list__item-user">
-                  <label class="order__sign order__sign-user title-inner">
+          <fieldset class="order-form__field order-form__field--fullname">
+            <div class="order-form__wrapper--fullname wrapper">
+              <h3 class="order-form__name order-form__name--fullname">ФИО</h3>
+              <ul class="order-form__set order-form__set--fullname">
+                <li class="order-form__item order-form__item-user">
+                  <label class="order-form__sign order-form__sign-user title-inner">
                     Имя:
-                    <input class="order__input-user" type="text" name="first-name" placeholder="Введите ваше имя*" required>
+                    <input class="order-form__input-user" type="text" name="first-name" placeholder="Введите ваше имя*" required>
                   </label>
                 </li>
-                <li class="order-list__item order-list__item-user">
-                  <label class="order__sign order__sign-user title-inner">
+                <li class="order-form__item order-form_item-user">
+                  <label class="order-form__sign order-form__sign-user title-inner">
                     Фамилия:
-                    <input class="order__input-user" type="text" name="last-name" placeholder="Укажите фамилию*" required>
+                    <input class="order-form__input-user" type="text" name="last-name" placeholder="Укажите фамилию*" required>
                   </label>
                 </li>
-                <li class="order-list__item order-list__item-user">
-                  <label class="order__sign order__sign-user title-inner">
+                <li class="order-form__item order-form__item-user">
+                  <label class="order-form__sign order-form__sign-user title-inner">
                     Отчество:
-                    <input class="order__input-user" type="text" name="patronymic" placeholder="Отчество, если желаете">
+                    <input class="order-form__input-user" type="text" name="patronymic" placeholder="Отчество, если желаете">
                   </label>
                 </li>
               </ul>
-            </fieldset>
+            </div>
+          </fieldset>
 
-            <fieldset class="order__field order__field-user">
-              <legend class="order__name title-inner">Тел</legend>
-                <label class="order__icon order__sign-user">
-                  <svg class="order__icon--tel" version="1.1" id="phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24.829px" height="24.333px" viewBox="0 0 24.829 24.333" enable-background="new 0 0 24.829 24.333" xml:space="preserve">
+          <fieldset class="order-form__field order-form__field-user order-form__field--tel">
+            <div class="order-form__wrapper--tel wrapper">
+              <h3 class="order-form__name order-form__name--tel">Тел</h3>
+                <label class="order-form__icon order-form__sign-user">
+                  <svg class="order-form__icon--tel" version="1.1" id="phone" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24.829px" height="24.333px" viewBox="0 0 24.829 24.333" enable-background="new 0 0 24.829 24.333" xml:space="preserve">
                     <g>
                       <g id="UrwUhy_2_">
                         <g>
@@ -177,29 +184,33 @@
                       <path d="M12.529,6.246c3.345,0,6.056,2.71,6.056,6.054h1.588c0-4.22-3.422-7.641-7.644-7.641V6.246z"/>
                     </g>
                   </svg>
-                  <input class="order__input-user" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+                  <input class="order-form__input-user" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
                 </label>
-            </fieldset>
+              </div>
+          </fieldset>
 
-            <fieldset class="order__field order__field-user">
-              <legend class="order__name title-inner">E-mail</legend>
-                <label class="order__icon order__sign-user">
-                  <svg class="order__icon--mail" version="1.1" id="mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+          <fieldset class="order-form__field order-form__field-user order-form__field--mail">
+            <div class="order-form__wrapper--mail wrapper">
+              <h3 class="order-form__name order-form__name--mail">E-mail</h3>
+                <label class="order-form__icon order-form__sign-user">
+                  <svg class="order-form__icon--mail" version="1.1" id="mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
                     <path id="mail" d="M28,5H4C1.791,5,0,6.792,0,9v13c0,2.209,1.791,4,4,4h24c2.209,0,4-1.791,4-4V9 C32,6.792,30.209,5,28,5z M2,10.25l6.999,5.25L2,20.75V10.25z M30,22c0,1.104-0.898,2-2,2H4c-1.103,0-2-0.896-2-2l7.832-5.875 l4.368,3.277c0.533,0.397,1.166,0.6,1.8,0.6c0.633,0,1.266-0.201,1.799-0.6l4.369-3.277L30,22L30,22z M30,20.75l-7-5.25l7-5.25 V20.75z M17.199,18.602c-0.35,0.263-0.763,0.4-1.199,0.4s-0.851-0.139-1.2-0.4L10.665,15.5l-0.833-0.625L2,9.001V9 c0-1.103,0.897-2,2-2h24c1.102,0,2,0.897,2,2L17.199,18.602z"/>
                   </svg>
-                  <input class="order__input-user" type="email" name="mail" placeholder="Ваш Email*" required>
+                  <input class="order-form__input-user" type="email" name="mail" placeholder="Ваш Email*" required>
                 </label>
-            </fieldset>
+              </div>
+          </fieldset>
 
-            <fieldset class="order__field">
-              <legend class="order__name title-inner">Доп</legend>
-              <textarea class="order__input-user order__textarea" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-            </fieldset>
+          <fieldset class="order-form__field order-form__field--textarea">
+            <div class="order-form__wrapper--textarea wrapper">
+              <h3 class="order-form__name">Доп</h3>
+              <textarea class="order-form__input-user order-form__textarea" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            </div>
+          </fieldset>
 
-            <span class="order__note">*Поля обязательны для заполнения</span>
-            <button class="button order__button" type="submit">Отправить заказ</button>
-          </form>
-        </div>
+          <span class="order-form__note">*Поля обязательны для заполнения</span>
+          <button class="order-form__button button" type="submit">Отправить заказ</button>
+        </form>
       </section>
     </main>
 
