--- a/source/form.html
+++ b/source/form.html
@@ -120,7 +120,7 @@
                 <li class="order-form__item order-form__item--color">
                   <label class="order-form__sign order-form__sign--color title-inner">
                     <input class="order-form__input" type="checkbox" name="check-input">
-                    <span class="order-form__box order__box--check"></span>
+                    <span class="order-form__box order-form__box--check"></span>
                     Чёрный
                   </label>
                 </li>
