--- a/source/index.html
+++ b/source/index.html
@@ -289,14 +289,14 @@
       <p class="modal-popup__info">Выберите размер:</p>
       <form class="modal-popup__form" action="http://echo.htmlacademy.ru" method="post">
         <div class="modal-popup__wrapper">
-          <label>
-            <input class="modal-popup__input" type="radio" name="size" value="s" checked>S
+          <label class="modal-popup__sign">
+            <input class="modal-popup__input visually-hidden" type="radio" name="size" checked>S
           </label>
-          <label>
-            <input class="modal-popup__input" type="radio" name="size" value="m">M
+          <label class="modal-popup__sign">
+            <input class="modal-popup__input visually-hidden" type="radio" name="size">M
           </label>
-          <label>
-            <input class="modal-popup__input" type="radio" name="size" value="l">L
+          <label class="modal-popup__sign">
+            <input class="modal-popup__input visually-hidden" type="radio" name="size">L
           </label>
         </div>
         <button class="modal-popup__button button" type="submit">Добавить</button>
