--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
               <svg class="user-list__link--icon" version="1.1" id="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
                 <path d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
               </svg>
-              <span class="use-list__link--note">Поиск по сайту</span>
+              <span class="user-list__link--note">Поиск по сайту</span>
             </a>
           </li>
           <li class="user-list__item user-list__item--cart">
@@ -58,23 +58,25 @@
       </nav>
     </header>
 
-    <main class="page-main feedback">
-      <div class="page-main__title-wrap wrapper">
-        <h1 class="page-main__title">Милые штуки ручной<br> работы для дома</h1>
-        <h2 class="visually-hidden">Каталог товаров</h2>
-        <ul class="catalog-main">
-          <li class="catalog-main__item catalog-main__item--interior">
-            <a class="catalog-main__link catalog-main__link--interior" href="#">
-              <h3 class="catalog-main__title">Предметы интерьера</h3>
-            </a>
-          </li>
-          <li class="catalog-main__item catalog-main__item--toys">
-            <a class="catalog-main__link catalog-main__link--toys" href="#">
-              <h3 class="catalog-main__title">Детские игрушки</h3>
-            </a>
-          </li>
-        </ul>
-      </div>
+    <main class="feedback">
+      <section class="page-main">
+        <div class="page-main__title-wrap wrapper">
+          <h1 class="page-main__title">Милые штуки ручной<br> работы для дома</h1>
+          <h2 class="visually-hidden">Каталог товаров</h2>
+          <ul class="catalog-main">
+            <li class="catalog-main__item catalog-main__item--interior">
+              <a class="catalog-main__link catalog-main__link--interior" href="#">
+                <h3 class="catalog-main__title">Предметы интерьера</h3>
+              </a>
+            </li>
+            <li class="catalog-main__item catalog-main__item--toys">
+              <a class="catalog-main__link catalog-main__link--toys" href="#">
+                <h3 class="catalog-main__title">Детские игрушки</h3>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <section class="promo">
         <div class="promo__wrapper wrapper">
