--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header feedback">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nave--nojs">
         <a class="main-nav__logo" href="index.html">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -17,7 +17,7 @@
             <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
           </picture>
         </a>
-        <button class="main-nav__toggle" type="button">меню</button>
+        <button class="main-nav__toggle" type="button" aria-label="открыть главное меню"></button>
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -258,6 +258,8 @@
         <button class="modal-popup__button button" type="submit">Добавить</button>
       </form>
     </section>
+
+    <script src="js/main-nav.js"></script>
 
   </body>
 </html>
