--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header feedback">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nave--nojs">
         <a class="main-nav__logo">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -171,7 +171,6 @@
                 <p>Поставляется в подарочной упаковке</p>
               </li>
             </ul>
-
         </div>
       </section>
 
@@ -306,6 +305,8 @@
 
       </form>
     </section>
+
+    <script src="js/main-nav.js"></script>
 
   </body>
 </html>
