--- a/source/catalog.html
+++ b/source/catalog.html
@@ -259,6 +259,7 @@
       </form>
     </section>
 
+    <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
 
   </body>
