--- a/source/form.html
+++ b/source/form.html
@@ -282,6 +282,7 @@
       </div>
     </footer>
 
+    <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
 
   </body>
