--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header feedback">
-      <nav class="main-nav main-nav--opened main-nave--nojs">
+      <nav class="main-nav main-nav-- main-nave--nojs">
         <a class="main-nav__logo" href="index.html">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -70,9 +70,9 @@
             <li class="catalog-list__item">
               <a class="catalog-list__link--img" href="#">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg">
-                  <img class="catalog-list__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="игрушка 'Вязаный зайчик'">
+                  <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
+                  <img class="catalog-list__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" width="260" height="195" alt="игрушка 'Вязаный зайчик'">
                 </picture>
               </a>
               <div class="catalog-list__desc">
@@ -94,9 +94,9 @@
             <li class="catalog-list__item">
               <a class="catalog-list__link--img" href="#">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg">
-                  <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
+                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                  <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
                 </picture>
               </a>
               <div class="catalog-list__desc">
@@ -118,9 +118,9 @@
             <li class="catalog-list__item">
               <a class="catalog-list__link--img" href="#">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg">
-                  <img class="catalog-list__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
+                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
+                  <img class="catalog-list__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
                 </picture>
               </a>
               <div class="catalog-list__desc">
@@ -147,9 +147,9 @@
           <h3 class="process__title title-inner">Процесс производства</h3>
           <div class="process__video">
             <picture>
-              <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg">
-              <img class="process__image" src="img/video-mobile@1x.jpg" width="260" height="150" alt="постер на видеоплеер 'Процесс производства'">
+              <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img class="process__image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="260" height="150" alt="постер на видеоплеер 'Процесс производства'">
             </picture>
 
             <button class="process__button" type="button" aria-label="Воспроизвести">
