--- a/source/index.html
+++ b/source/index.html
@@ -104,7 +104,13 @@
               </tr>
             </table>
           </div>
-          <img class="promo__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Набор вязаных корзинок">
+
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+            <img class="promo__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Набор вязаных корзинок">
+          </picture>
+
           <div class="promo__price-wrap">
             <p class="promo__price title-inner">Цена: 990 руб.</p>
             <a class="promo__button button" href="#">Заказать</a>
