--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header feedback">
-      <nav class="main-nav main-nav-- main-nave--nojs">
+      <nav class="main-nav main-nav--opened main-nave--nojs">
         <a class="main-nav__logo" href="index.html">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
@@ -127,8 +127,8 @@
                 <a class="catalog-list__link" href="#">
                   <h3 class="catalog-list__name title-inner">Большая корзинка<br> для игрушек</h3>
                 </a>
-                <p class="catalog-list__description description-inner">Диаметр 30 см, высота 30см</p>
-                <div class="catalog-list__wrap catalog-list__wrap--toys">
+                <p class="catalog-list__description catalog-list__description--toys description-inner">Диаметр 30 см, высота 30см</p>
+                <div class="catalog-list__wrap catalog-list__wrap">
                   <span class="catalog-list__price">1 500 руб.</span>
                   <a class="catalog-list__button" href="add-to-cart.html" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" version="1.1" id="item_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
