--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header feedback">
-      <nav class="main-nav main-nav--closed main-nave--nojs">
+      <nav class="main-nav main-nav--opened main-nave--nojs">
         <a class="main-nav__logo" href="index.html">
           <picture>
             <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
