--- a/source/index.html
+++ b/source/index.html
@@ -113,7 +113,7 @@
 
           <div class="promo__price-wrap">
             <p class="promo__price title-inner">Цена: 990 руб.</p>
-            <a class="promo__button button" href="#">Заказать</a>
+            <a class="promo__button button js-button" href="#">Заказать</a>
           </div>
         </div>
       </section>
@@ -218,6 +218,11 @@
 
           <div class="contacts__map">
             <iframe class="contacts__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.32085871617607!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1587322655043!5m2!1sit!2sit"  height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
+              <img src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="карта">
+            </picture>
           </div>
 
           <div class="contacts__link-wrap">
@@ -292,7 +297,7 @@
 
     <!--popup-->
 
-    <section class="modal-popup">
+    <section class="modal-popup modal-show">
       <h2 class="modal-popup__title">Добавить в корзину</h2>
       <p class="modal-popup__info">Выберите размер:</p>
       <form class="modal-popup__form" action="http://echo.htmlacademy.ru" method="post">
@@ -310,7 +315,7 @@
             <span class="modal-popup__size">L</span>
           </label>
         </div>
-        <button class="modal-popup__button button" type="submit">Добавить</button>
+        <button class="modal-popup__button button modal-close" type="submit">Добавить</button>
       </form>
     </section>
 
