--- a/source/index.html
+++ b/source/index.html
@@ -318,6 +318,7 @@
         <button class="modal-popup__button button modal-close" type="submit">Добавить</button>
       </form>
     </section>
+    <div class="overlay"></div>
 
     <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
