модальное окно js

--- a/source/index.html
+++ b/source/index.html
@@ -295,9 +295,9 @@
       </div>
     </footer>
 
-    <!--popup-->
+    <!--pop-up-->
 
-    <section class="modal-popup modal-show">
+    <section class="modal-popup">
       <h2 class="modal-popup__title">Добавить в корзину</h2>
       <p class="modal-popup__info">Выберите размер:</p>
       <form class="modal-popup__form" action="http://echo.htmlacademy.ru" method="post">
@@ -322,6 +322,7 @@
 
     <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
+    <script src="js/modal.js"></script>
 
   </body>
 </html>
