--- a/source/catalog.html
+++ b/source/catalog.html
@@ -240,7 +240,9 @@
       </div>
     </footer>
 
-    <section class="modal-popup modal-show">
+    <!--pop-up-->
+
+    <section class="modal-popup">
       <h2 class="modal-popup__title">Добавить в корзину</h2>
       <p class="modal-popup__info">Выберите размер:</p>
       <form class="modal-popup__form" action="http://echo.htmlacademy.ru" method="post">
@@ -261,10 +263,12 @@
         <button class="modal-popup__button button modal-close" type="submit">Добавить</button>
       </form>
     </section>
+    <div class="overlay"></div>
 
 
     <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
+    <script src="js/modal.js"></script>
 
   </body>
 </html>
