Добавлен скрипт svg4everybody

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -237,10 +237,10 @@
     </section>
     <div class="overlay"></div>
 
-
-    <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/picturefill.min.js"></script>
+    <script src="js/svg4everybody.min.js"></script>
 
   </body>
 </html>
