--- a/source/form.html
+++ b/source/form.html
@@ -265,8 +265,9 @@
       </div>
     </footer>
 
-    <script src="js/picturefill.min.js"></script>
     <script src="js/main-nav.js"></script>
+    <script src="js/picturefill.min.js"></script>
+    <script src="js/svg4everybody.min.js"></script>
 
   </body>
 </html>
