--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,7 +32,7 @@
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px">
-                <use xlink: href="img/sprite.svg#search"></use>
+                <use xlink:href="img/sprite.svg#search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
             </a>
@@ -40,7 +40,7 @@
           <li class="user-list__item user-list__item--cart">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--cart" width="21px" height="18px">
-                <use xlink: href="img/sprite.svg#cart"></use>
+                <use xlink:href="img/sprite.svg#cart"></use>
               </svg>
               <span>Корзина: пока пуста</span>
             </a>
@@ -72,7 +72,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x" srcset="img/photo-hare-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x, img/photo-hare-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
@@ -88,7 +88,7 @@
                   <span class="catalog-list__price">1 200 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
-                      <use xlink: href="img/sprite.svg#cart"></use>
+                      <use xlink:href="img/sprite.svg#cart"></use>
                     </svg>
                   </a>
                 </div>
@@ -100,7 +100,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x" srcset="img/photo-bowl-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
@@ -116,7 +116,7 @@
                   <span class="catalog-list__price">690 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
-                      <use xlink: href="img/sprite.svg#cart"></use>
+                      <use xlink:href="img/sprite.svg#cart"></use>
                     </svg>
                   </a>
                 </div>
@@ -128,7 +128,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/photo-toys-mobile@1x.webp 1x" srcset="img/photo-toys-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-toys-mobile@1x.webp 1x, img/photo-toys-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
@@ -144,7 +144,7 @@
                   <span class="catalog-list__price">1 500 руб.</span>
                   <a class="catalog-list__button js-button" href="#" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" width="20.294px" height="18.849px">
-                      <use xlink: href="img/sprite.svg#cart"></use>
+                      <use xlink:href="img/sprite.svg#cart"></use>
                     </svg>
                   </a>
                 </div>
@@ -161,7 +161,7 @@
             <picture>
               <source type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/video-mobile@1x.webp 1x" srcset="img/video-mobile@2x.webp 2x">
+              <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
 
               <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
@@ -170,7 +170,7 @@
 
             <button class="process__button" type="button" aria-label="Воспроизвести">
               <svg width="100.678px" height="76.891px">
-                <use xlink: href="img/sprite.svg#video"></use>
+                <use xlink:href="img/sprite.svg#video"></use>
               </svg>
             </button>
           </div>
@@ -188,8 +188,8 @@
     <footer class="page-footer feedback">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo" href="index.html">
-          <svg id="logo-color" width="101.615px" height="34.056px">
-            <use xlink: href="img/sprite.svg#logo-color"></use>
+          <svg id="logo-color" width="101.615px" height="34.056px" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
+            <use xlink:href="img/sprite.svg#logo-color"></use>
           </svg>
         </a>
         <div class="page-footer__social social">
@@ -197,21 +197,21 @@
             <li class="social__item">
               <a class="social__link social__link--instagram" href="#" aria-label="Instagram">
                 <svg  width="21.769px" height="21.334px">
-                  <use xlink: href="img/sprite.svg#insta"></use>
+                  <use xlink:href="img/sprite.svg#insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="#" aria-label="Facebook">
                 <svg width="14.962px" height="27.718px">
-                  <use xlink: href="img/sprite.svg#fb"></use>
+                  <use xlink:href="img/sprite.svg#fb"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Twitter">
                 <svg width="23.494px" height="20.168px">
-                  <use xlink: href="img/sprite.svg#twit"></use>
+                  <use xlink:href="img/sprite.svg#twit"></use>
                 </svg>
               </a>
             </li>
@@ -221,7 +221,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__link--text">Разработано</span>
             <svg class="copyright__link--img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
-              <use xlink: href="img/sprite.svg#html-academy"></use>
+              <use xlink:href="img/sprite.svg#html-academy"></use>
             </svg>
           </a>
         </div>
