--- a/source/form.html
+++ b/source/form.html
@@ -32,7 +32,7 @@
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px">
-                <use xlink: href="img/sprite.svg#search"></use>
+                <use xlink:href="img/sprite.svg#search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
             </a>
@@ -40,7 +40,7 @@
           <li class="user-list__item user-list__item--cart">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--cart" width="21px" height="18px">
-                <use xlink: href="img/sprite.svg#cart"></use>
+                <use xlink:href="img/sprite.svg#cart"></use>
               </svg>
               <span>Корзина: пока пуста</span>
             </a>
@@ -187,7 +187,7 @@
 
                   <label class="order-form__icon order-form__sign-user">
                     <svg class="order-form__icon--tel" width="24.829px" height="24.333px">
-                      <use xlink: href="img/sprite.svg#phone"></use>
+                      <use xlink:href="img/sprite.svg#phone"></use>
                     </svg>
                     <input class="order-form__input-user order-form__input-info" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
                   </label>
@@ -199,7 +199,7 @@
                 <h3 class="order-form__name order-form__name--mail">E&#8209;mail</h3>
                   <label class="order-form__icon order-form__sign-user">
                     <svg class="order-form__icon--mail" width="32px" height="32px">
-                      <use xlink: href="img/sprite.svg#e_mail"></use>
+                      <use xlink:href="img/sprite.svg#e_mail"></use>
                     </svg>
                     <input class="order-form__input-user order-form__input-info" type="email" name="mail" placeholder="Ваш Email*" required>
                   </label>
@@ -224,9 +224,9 @@
 
     <footer class="page-footer feedback">
       <div class="wrapper page-footer__wrapper">
-        <a class="page-footer__logo" href="index.html">
+        <a class="page-footer__logo" href="index.html" aria-label="Логотип-ссылка на главную страницу интернет-магазина">
           <svg id="logo-color" width="101.615px" height="34.056px">
-            <use xlink: href="img/sprite.svg#logo-color"></use>
+            <use xlink:href="img/sprite.svg#logo-color"></use>
           </svg>
         </a>
         <div class="page-footer__social social">
@@ -234,21 +234,21 @@
             <li class="social__item">
               <a class="social__link social__link--instagram" href="#" aria-label="Instagram">
                 <svg  width="21.769px" height="21.334px">
-                  <use xlink: href="img/sprite.svg#insta"></use>
+                  <use xlink:href="img/sprite.svg#insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="#" aria-label="Facebook">
                 <svg width="14.962px" height="27.718px">
-                  <use xlink: href="img/sprite.svg#fb"></use>
+                  <use xlink:href="img/sprite.svg#fb"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Twitter">
                 <svg width="23.494px" height="20.168px">
-                  <use xlink: href="img/sprite.svg#twit"></use>
+                  <use xlink:href="img/sprite.svg#twit"></use>
                 </svg>
               </a>
             </li>
@@ -258,7 +258,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__link--text">Разработано</span>
             <svg class="copyright__link--img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
-              <use xlink: href="img/sprite.svg#html-academy"></use>
+              <use xlink:href="img/sprite.svg#html-academy"></use>
             </svg>
           </a>
         </div>
