--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px">
-                <use xlink: href="img/sprite.svg#search"></use>
+                <use xlink:href="img/sprite.svg#search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
             </a>
@@ -41,7 +41,7 @@
           <li class="user-list__item user-list__item--cart">
             <a class="user-list__link title-inner" href="#">
               <svg class="user-list__link-icon user-list__link-icon--cart" width="21px" height="18px">
-                <use xlink: href="img/sprite.svg#cart"></use>
+                <use xlink:href="img/sprite.svg#cart"></use>
               </svg>
               <span>Корзина: пока пуста</span>
             </a>
@@ -109,7 +109,7 @@
           <picture>
             <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x" srcset="img/triple-set-mobile@2x.webp 2x">
+            <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
 
             <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
@@ -129,37 +129,37 @@
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--ecology">
                 <svg width="31.972px" height="37.301px">
-                  <use xlink: href="img/sprite.svg#ecology"></use>
+                  <use xlink:href="img/sprite.svg#ecology"></use>
                 </svg>
                 <p>Экологически<br> чистые материалы</p>
               </li>
               <li class="advantages__item advantages__item--style">
                 <svg width="46.575px" height="27.332px">
-                  <use xlink: href="img/sprite.svg#style"></use>
+                  <use xlink:href="img/sprite.svg#style"></use>
                 </svg>
                 <p>Скандинавский стиль по российской цене</p>
               </li>
               <li class="advantages__item advantages__item--like">
                 <svg width="33.05px" height="27.857px">
-                  <use xlink: href="img/sprite.svg#like"></use>
+                  <use xlink:href="img/sprite.svg#like"></use>
                 </svg>
                 <p>Увеличивает лайки на фотографиях</p>
               </li>
               <li class="advantages__item advantages__item--love">
                 <svg width="34.373px" height="34.373px">
-                  <use xlink: href="img/sprite.svg#love"></use>
+                  <use xlink:href="img/sprite.svg#love"></use>
                 </svg>
                 <p>Связано вручную с любовью и умилением</p>
               </li>
               <li class="advantages__item advantages__item--support">
                 <svg width="54.156px" height="23.183px">
-                  <use xlink: href="img/sprite.svg#support"></use>
+                  <use xlink:href="img/sprite.svg#support"></use>
                 </svg>
                 <p>Поддержка отечественного производителя</p>
               </li>
               <li class="advantages__item advantages__item--gift">
                 <svg width="32.666px" height="32.486px">
-                  <use xlink: href="img/sprite.svg#gift"></use>
+                  <use xlink:href="img/sprite.svg#gift"></use>
                 </svg>
                 <p>Поставляется в подарочной упаковке</p>
               </li>
@@ -208,7 +208,7 @@
             <picture>
               <source type="image/webp" media="(min-width: 1150px)" srcset="img/map-desktop@1x.webp 1x, img/map-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet@1x.webp 1x, img/map-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/map-mobile@1x.webp 1x" srcset="img/map-mobile@2x.webp 2x">
+              <source type="image/webp" srcset="img/map-mobile@1x.webp 1x, img/map-mobile@2x.webp 2x">
 
               <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
@@ -226,7 +226,7 @@
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo">
           <svg id="logo-color" width="101.615px" height="34.056px">
-            <use xlink: href="img/sprite.svg#logo-color"></use>
+            <use xlink:href="img/sprite.svg#logo-color"></use>
           </svg>
         </a>
 
@@ -235,21 +235,21 @@
             <li class="social__item">
               <a class="social__link social__link--instagram" href="#" aria-label="Instagram">
                 <svg  width="21.769px" height="21.334px">
-                  <use xlink: href="img/sprite.svg#insta"></use>
+                  <use xlink:href="img/sprite.svg#insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="#" aria-label="Facebook">
                 <svg width="14.962px" height="27.718px">
-                  <use xlink: href="img/sprite.svg#fb"></use>
+                  <use xlink:href="img/sprite.svg#fb"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Twitter">
                 <svg width="23.494px" height="20.168px">
-                  <use xlink: href="img/sprite.svg#twit"></use>
+                  <use xlink:href="img/sprite.svg#twit"></use>
                 </svg>
               </a>
             </li>
@@ -259,7 +259,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__link--text">Разработано</span>
             <svg class="copyright__link--img" aria-label="HTML и CSS, уровень 2" width="26.943px" height="34.09px">
-              <use xlink: href="img/sprite.svg#html-academy"></use>
+              <use xlink:href="img/sprite.svg#html-academy"></use>
             </svg>
           </a>
         </div>
