Проверка на валидность и доступность

--- a/source/form.html
+++ b/source/form.html
@@ -31,7 +31,7 @@
         <ul class="main-nav__list user-list">
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
-              <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px">
+              <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px" role="img" aria-label="Поиск по сайту" focusable="false">
                 <use xlink:href="img/sprite.svg#search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
@@ -153,7 +153,7 @@
 
           <fieldset class="order-form__field">
             <div class="order-form__wrapper order-form__wrapper--fullname wrapper">
-              <h3 class="order-form__name order-form__name--fullname">ФИО</h3>
+              <h3 class="order-form__name">ФИО</h3>
               <ul class="order-form__set order-form__set--fullname">
 
                 <li class="order-form__item order-form__item-user">
@@ -183,7 +183,7 @@
           <div class="order-form__field-user">
             <fieldset class="order-form__field  order-form__field--tel">
               <div class="order-form__wrapper order-form__wrapper--tel wrapper">
-                <h3 class="order-form__name order-form__name--tel">Тел</h3>
+                <h3 class="order-form__name">Тел</h3>
 
                   <label class="order-form__icon order-form__sign-user">
                     <svg class="order-form__icon--tel" width="24.829px" height="24.333px">
@@ -196,7 +196,7 @@
 
             <fieldset class="order-form__field">
               <div class="order-form__wrapper order-form__wrapper--mail wrapper">
-                <h3 class="order-form__name order-form__name--mail">E&#8209;mail</h3>
+                <h3 class="order-form__name">E&#8209;mail</h3>
                   <label class="order-form__icon order-form__sign-user">
                     <svg class="order-form__icon--mail" width="32px" height="32px">
                       <use xlink:href="img/sprite.svg#e_mail"></use>
@@ -209,8 +209,8 @@
 
           <fieldset class="order-form__field order-form__field--textarea">
             <div class="order-form__wrapper order-form__wrapper--textarea wrapper">
-              <h3 class="order-form__name order-form__name--add">Доп</h3>
-              <textarea class="order-form__input-user order-form__textarea" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <h3 class="order-form__name">Доп</h3>
+              <textarea class="order-form__input-user order-form__input-info order-form__textarea" name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </fieldset>
 
