--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
         <ul class="main-nav__list user-list">
           <li class="user-list__item user-list__item--search">
             <a class="user-list__link title-inner" href="#">
-              <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px">
+              <svg class="user-list__link-icon user-list__link-icon--search" width="18px" height="18px" role="img" aria-label="Поиск по сайту" focusable="false">
                 <use xlink:href="img/sprite.svg#search"></use>
               </svg>
               <span class="user-list__link--note">Поиск по сайту</span>
@@ -83,7 +83,7 @@
       <section class="promo">
         <div class="promo__wrapper wrapper">
           <div class="promo__title-wrap">
-            <h2 class="promo__title title-main">Вязаные корзинки</h2>
+            <h2 class="promo__title title-main" aria-label="Товар недели">Вязаные корзинки</h2>
           </div>
           <div class="promo__description-wrap">
             <p class="promo__description">
